--- a/src/compunent/navbar/navbar.scss
+++ b/src/compunent/navbar/navbar.scss
@@ -11,6 +11,7 @@
         background-color: var(--main-color);
     }
     .container{
+        position: relative;
         padding: 0px 50px;
         display: flex;
         height: 55px;
@@ -31,11 +32,9 @@
                 cursor: pointer;
             }
         }
-
-
         .right{
             display: flex;
-            align-items: end;
+            align-items: center;
             img{
                 width: 30px;
                 height: 30px;
@@ -52,6 +51,7 @@
             height: 30px;
         }
         .profiles{
+            position: relative;
             .options{
                 display: none;
                 background-color: var(--main-color);
